--- a/mylearning.org
+++ b/mylearning.org
@@ -83,8 +83,9 @@
 ***** 多项式拟合
 - 概念：根据给定的m个点，并不要求这条曲线经过这些点，而是y=f(x)的近似曲线y=\(\Phi(x)\)；
   
-* 算法
-** cordic算法
+* 机器学习
+** 算法
+*** cordic算法
 三角函数的计算是个复杂的主题，有计算机之前，人们通常通过查找三角函数表来计算任意角度的三角函数的值。这种表格在人们刚刚产
 生三角函数的概念的时候就已经有了，它们通常是通过从已知值（比如sin(π/2)=1）开始并重复应用半角和和差公式而生成。现在有了
 计算机，三角函数表便推出了历史的舞台。但是像我这样的喜欢刨根问底的人，不禁要问计算机又是如何计算三角函数值的呢。最容易想
@@ -97,7 +98,7 @@ J. Walther在1974年在这种算法的基础上进一步改进，使其可以计算出多种超越函数，更大
 法只用了移位和加法，很容易用纯硬件来实现，因此我们常能在FPGA运算平台上见到它的身影。不过，大多数的软件程序员们都没有听说
 过这种算法，也更不会主动的去用这种算法。其实，在嵌入式软件开发，尤其是在没有浮点运算指令的嵌入式平台（比如定点型DSP）上
 做开发时，还是会遇上可以用到cordic 算法的情况的，所以掌握基本的cordic算法还是有用的。
-*** 背景
+**** 背景
 三角函数的计算是个复杂的主题，有计算机之前，人们通常通过查找三角函数表来计算任意角度的三角函数的值。这种表格在人们刚刚产
 生三角函数的概念的时候就已经有了，它们通常是通过从已知值（比如sin(π/2)=1）开始并重复应用半角和和差公式而生成。 
 现在有了计算机，三角函数表便推出了历史的舞台。但是像我这样的喜欢刨根问底的人，不禁要问计算机又是如何计算三角函数值的呢。
@@ -111,7 +112,7 @@ J. Walther在1974年在这种算法的基础上进一步改进，使其可以计算出多种超越函数，更大
 的身影。不过，大多数的软件程序员们都没有听说过这种算法，也更不会主动的去用这种算法。其实，在嵌入式软件开发，尤其是在没有
 浮点运算指令的嵌入式平台（比如定点型dsp）上做开发时，还是会遇上可以用到cordic 算法的情况的，所以掌握基本的cordic算法还是
 有用的。 
-*** 从二分查找法说起
+**** 从二分查找法说起
 先从一个例子说起，知道平面上一点在直角坐标系下的坐标（X,Y）=（100，200），如何求的在极坐标系下的坐标（ρ,θ）。用计算器
 计算一下可知答案是（223.61，63.435），见图\ref{img-cordic1}所示。
 #+caption: 直角坐标系到极坐标系的转换
@@ -221,7 +222,7 @@ cos 函数的值，提前计算好存起来，用时查表。
 	Debug: i = 14 angleSum = 63.432312, angle = 0.002747
 	z = 63.432312
 #+end_src
-*** 减少乘法运算
+**** 减少乘法运算
 现在已经有点cordic算法的样子了，但是我们看到没次循环都要计算4次浮点数的乘法运算，运算量还是太大了。还需要进一步的改
 进。改进的切入点当然还是坐标变换的过程。我们将坐标变换公式变一下形。
 $${x' \choose y'} = {cos(\Theta) \quad sin(\Theta) \choose -sin(\Theta) \quad cos(\Theta)} {x \choose y} = cos(\Theta){1
@@ -287,7 +288,7 @@ Debug: i = 13 angleSum = 63.429565, angle = 0.005493, ρ = 351.240736
 Debug: i = 14 angleSum = 63.432312, angle = 0.002747, ρ = 351.240736
 z = 63.432312
 #+end_src
-*** 消除乘法运算
+**** 消除乘法运算
 我们已经成功的将乘法的次数减少了一半，还有没有可能进一步降低运算量呢？还要从计算式入手。第一次循环时，tan(45)=1，所以第
 一次循环实际上是不需要乘法运算的。第二次运算呢？ 
 tan(22.5)=0.4142135623731,很不幸，第二次循环乘数是个很不整的小数。是否能对其改造一下呢？答案是肯定的。第二次选择22.5度是
@@ -467,6 +468,64 @@ z = 16238
 计算 atan 函数，其他的像 sin，cos，sinh，cosh 等一系列的函数都可以计算，不过那些都不在本文的讨论范围内了。另外，每次旋转
 时到原点的距离都会发生变化，而这个变化是确定的，因此可以在循环运算结束后以此补偿回来，这样的话我们就同时将（ρ,θ）都计
 算出来了。 
+*** K临近算法
+K临近算法主要采用将一定的样本，规划为已知的标签，每个样本针对标签有若干的特征值，然后当有新的样本点时，计算新样本点到已
+知样本的距离，然后选取前K个距离最近的样本的标签作为该样本的标签。实例代码如下，我们有由createDataSet函数生成一个测试样本
+和标签集，其中array的每个元素代表一个已知样本，而每个已知样本的各个元素代表其特征值，labels给出了group的每个样本的标签；
+现通过classify0函数将新样本inX归类到某个标签上。 *注意:* 要运行必须要删除所有的中文注释。
+#+begin_src python
+import numpy as np
+import scipy as sp
+import operator
+
+def createDataSet():
+    group = np.array([[1.0, 1.1], [1.0, 1.0], [0, 0], [0, 0.1]])
+    labels = ['A', 'A', 'B', 'B']
+    return group, labels
+
+# inX和dataSet的行向量应该是一致的
+# 每个行代表一个样本
+def classify0(inX, dataSet, labels, k):
+    # dataSet是一个numpy array，shape属性包含行数和列数，比如shape[0]给出函数，shape[1]给出列数，这里我们需要行数，它对
+    # 应于观察点(dataSet)的数目，列数对应每个点对应的特征项
+    dataSetSize = dataSet.shape[0]
+    # inX是一个list，这一行表示将inX复制总共dataSetSize次，tile函数第一个参数表示需要复制的量，第二个参数表示需要负责的
+    # 形式，也就是说将inX复制dataSetSize行，1列，其维度满足dataSet
+    matrExt = tile(inX, (dataSetSize, 1)) 
+    # 开始计算inX和dataSet中每个样本的距离
+    diffMat = matrExt - dataSet
+    sqDiffMat = diffMat**2
+    # 以列维度相加, 如果axis=0, 将以行维度进行相加，如果直接用sum()将会计算所有元素的和
+    sqDistances = sqDiffMat.sum(axis=1) 
+    distances = sqDistances**0.5
+    # argsort函数返回数组值从小到大的索引值 
+    sortedDistInddicies = distances.argsort() 
+    # 建立一个空字典/哈希表/映射:键值为label;值为每个label出现的频率
+    classCount={}
+    for i in range(k):
+        # 寻找到前K个距离最近点的标签，然后对每个标签在字典classCount里面统计出现的次数
+        voteIlabel = labels[sortedDistInddicies[i]]
+        # dict.get(key, default=None)
+        # key 字典中要查找的键。default 如果指定键的值不存在，返回该默认值值。
+        # 已labels为标签下标，统计每个标签所出现的频率
+        classCount[voteIlabel]=classCount.get(voteIlabel, 0)+1
+    # 最终得到的classCount大概长这样{'A': 3, 'C': 5, 'B': 2}，也就是意味着标签C出现的次数最多，目的就是要返回最多的，下
+    # 面这行代码将字典排序成list，大的在前
+    # classCount.items(), 将得到dict_items([('c', 5), ('b', 2), ('a', 3)])
+    # operator.itemgetter(1)定义了一个函数，获取对象上的值，必须要作用到对象上才行
+    # Python内置的排序函数sorted可以对list或者iterator进行排序;
+    # 综合来看下面先将classCount转化为list，元素为元组，然后key指定排序时使用的排序方法(元组的第1个元素)，由reverse指定
+    # 是逆序排序
+    # 最后sortedClassCount形如[('c', 5), ('a', 3), ('b', 2)]
+    sortedClassCount = sorted(classCount.items(), key=operator.itemgetter(1), reverse = True)
+    # 返回'c'
+    return sortedClassCount[0][0]
+
+point0 = [0, 0]
+g, l = createDataSet()
+print("resualt: %r" %classify0(point0, g, l, 3))
+#+end_src
+
 * 协议
 ** 大族协议
 *** ble
