--- a/sitemap.org
+++ b/sitemap.org
@@ -1,4 +1,12 @@
 #+TITLE: Sitemap
 
-   + [[file:mylearning.org][2015-09-07 知识管理]]
-   + [[file:index.org][2015-08-23 比克曼的博客]]
+   + [[file:index.org][2015-09-09 比克曼的知识管理]]
+   + [[file:hardware.org][2015-09-09 硬件 ]]
+   + [[file:language.org][2015-09-09 外语学习]]
+   + [[file:encyclopedia.org][2015-09-09 百科知识]]
+   + [[file:tool.org][2015-09-09 工具]]
+   + [[file:system.org][2015-09-09 操作系统]]
+   + [[file:software.org][2015-09-09 软件 ]]
+   + [[file:math.org][2015-09-09 数学 ]]
+   + [[file:ml.org][2015-09-09 机器学习 ]]
+   + [[file:protocol.org][2015-09-09 协议 ]]
