增加各种latex特殊符号

--- a/tool.org
+++ b/tool.org
@@ -19,7 +19,7 @@
   #+label: img-pic-test
   #+attr_latex: placement=[H] scale=0.2
   [[./img/emacs1.jpg]]
-- 字体：试试 *粗体* ，试试 /斜体/ ,  试试 +删除线+ ，试试 _下划线_, 试试下标 H_{2}O 试试上标 E=mc^2 ，等宽字体 =git=
+- 字体：试试 *粗体* ，试试 /斜体/ ,  试试删除线  +删除线+ ，试试 _下划线_, 试试下标 H_{2}O 试试上标 E=mc^2 ，等宽字体 =git=
 - el源文件编译:对于emacs某些包，有生成的elc的编译文件，emacs启动时，调用elc启动速度会更快，但是如果修改了源文件el，则可
   以使用M-x：byte-recompile-directory来重新编译，才能将修改的地方起作用。比如org mode中修改latex的生成模式函数
   org-export-latex-make-header
@@ -34,11 +34,13 @@
 ** org-mode
 # <<org-mode>>
 - 插入公式：
-  1. 公式：$a^2+b^2=c^2$
-  2. 公式：\(a^2 + b^2 = c^2\)
-  3. 公式：$$a^2 + b^2 = c^2$$
-  4. 公式：\[a^2 + b^2 = c^2\]
-  5. 公式5：\(\sqrt{2}\)
+  1. 公式：在本行，$a^2+b^2=c^2$
+  2. 公式：在本行，\(a^2 + b^2 = c^2\)
+  3. 公式：单独成行。$$a^2 + b^2 = c^2$$
+  4. 公式：单独成行。\[a^2 + b^2 = c^2\]
+  5. 公式：在本行，\(\sqrt{2}\)
+  6. 和公式：$$a=\sum_{i=0}^{n}a_{i}$$
+  7. 分数公式：$$\frac{x}{y}$$
 - 表格计算：
   + 行表示：第2行：@2;
   + 列表示：第2列：$2;
@@ -101,13 +103,191 @@
   C-z直接运行buffer的代码；
 -
 * latex
-- 固定latex插入的图片位置
-  #+begin_src latex
-    \subsubsection{\kai{metis的数据流图}}
-    \begin{figure}[H]%注意是大写的H哦
-        \centering
-        \includegraphics[width=1.2\textwidth]{eps/metis_dataflow.eps}
-        \caption{metis dataflow}
-        \label{metis_dataflaw}
-    \end{figure}
-  #+end_src
+** 方法
+# - 固定latex插入的图片位置
+#   #+begin_src latex
+#     \subsubsection{\kai{metis的数据流图}}
+#     \begin{figure}[H]%注意是大写的H哦
+#         \centering
+#         \includegraphics[width=1.2\textwidth]{eps/metis_dataflow.eps}
+#         \caption{metis dataflow}
+#         \label{metis_dataflaw}
+#     \end{figure}
+#   #+end_src
+** 符号
+*** 特殊符号
+|-------------------+-------------------+-----------------------+------------------------+-------------------|
+| 顶部横线          | 底部横线          | 顶部左箭头            | 顶部右箭头             | 顶部波浪号        |
+| $\overline{abc}$  | $\underline{abc}$ | $\overleftarrow{abc}$ | $\overrightarrow{abc}$ | $\widetilde{abc}$ |
+|-------------------+-------------------+-----------------------+------------------------+-------------------|
+| 顶部尖号          | 顶部大括号向上    | 底部大括号向下        | 根号                   | n次方根号         |
+| $\widehat{abc}$   | $\overbrace{abc}$ | $\underbrace{abc}$    | $\sqrt{abc}$           | $\sqrt[n]{abc}$   |
+|-------------------+-------------------+-----------------------+------------------------+-------------------|
+| 分数号            | 无                | 无                    | 无                     | 无                |
+| $\frac{abc}{xyz}$ | 无                | 无                    | 无                     | 无                |
+|-------------------+-------------------+-----------------------+------------------------+-------------------|
+*** 大写的希腊字母
+|--------+---------+----------+--------|
+| \Gamma | \Lambda | \Sigma   | \Psi   |
+|--------+---------+----------+--------|
+| \Delta | \Xi     | \Upsilon | \Omega |
+|--------+---------+----------+--------|
+| \Theta | \Pi     | \Phi     | 无     |
+|--------+---------+----------+--------|
+*** 希腊字母
+|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
+| \alpha | \beta     | \gamma  | \delta   | \epsilon | \varepsilon | \zeta | \eta   | \theta | \vartheta |
+|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
+| \iota  | \kappa    | \lambda | \mu      | \nu      | \xi         | \pi   | \varpi | \rho   | \varrho   |
+|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
+| \sigma | \varsigma | \tau    | \upsilon | \phi     | \varphi     | \chi  | \psi   | \omega | 无        |
+|--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
+*** 箭头符号
+|--------------------+---------------------|
+| \leftarrow         | \longleftarrow      |
+|--------------------+---------------------|
+| \Leftarrow         | \Longleftarrow      |
+|--------------------+---------------------|
+| \rightarrow        | \longrightarrow     |
+|--------------------+---------------------|
+| \Rightarrow        | \Longrightarrow     |
+|--------------------+---------------------|
+| \leftrightarrow    | \longleftrightarrow |
+|--------------------+---------------------|
+| \Leftrightarrow    | \Longleftrightarrow |
+|--------------------+---------------------|
+| \mapsto            | \longmapsto         |
+|--------------------+---------------------|
+| \hookleftarrow     | \hookrightarrow     |
+|--------------------+---------------------|
+| \leftharpoonup     | \rightharpoonup     |
+|--------------------+---------------------|
+| \leftharpoondown   | \rightharpoondown   |
+|--------------------+---------------------|
+| \rightleftharpoons | \leadsto            |
+|--------------------+---------------------|
+| \uparrow           | \downarrow          |
+|--------------------+---------------------|
+| \Uparrow           | \Downarrow          |
+|--------------------+---------------------|
+| \updownarrow       | \Updownarrow        |
+|--------------------+---------------------|
+| \nwarrow           | \nearrow            |
+|--------------------+---------------------|
+| \swarrow           | \searrow            |
+|--------------------+---------------------|
+*** 二进制符号
+|---------+-----------+------------------|
+| \pm     | \cap      | \diamond         |
+|---------+-----------+------------------|
+| \mp     | \cup      | \bigtriangleup   |
+|---------+-----------+------------------|
+| \times  | \uplus    | \bigtriangledown |
+|---------+-----------+------------------|
+| \div    | \sqcap    | \triangleleft    |
+|---------+-----------+------------------|
+| \ast    | \sqcup    | \triangleright   |
+|---------+-----------+------------------|
+| \star   | \vee      | \lhd             |
+|---------+-----------+------------------|
+| \circ   | \wedge    | \rhd             |
+|---------+-----------+------------------|
+| \bullet | \setminus | \unlhd           |
+|---------+-----------+------------------|
+| \cdot   | \wr       | \unrhd           |
+|---------+-----------+------------------|
+| \oplus  | \ominus   | \otimes          |
+|---------+-----------+------------------|
+| \oslash | \odot     | \bigcirc         |
+|---------+-----------+------------------|
+| \dagger | \ddagger  | \amalg           |
+|---------+-----------+------------------|
+*** 关系符号
+|-------------+-------------+-----------|
+| \leq        | \geq        | \equiv    |
+|-------------+-------------+-----------|
+| \prec       | \succ       | \sim      |
+|-------------+-------------+-----------|
+| \preceq     | \succeq     | \simeq    |
+|-------------+-------------+-----------|
+| \ll         | \gg         | \asymp    |
+|-------------+-------------+-----------|
+| \subset     | \supset     | \approx   |
+|-------------+-------------+-----------|
+| \subseteq   | \sqsupset   | \neq      |
+|-------------+-------------+-----------|
+| \sqsubseteq | \sqsupseteq | \doteq    |
+|-------------+-------------+-----------|
+| \in         | \ni         | \notin    |
+|-------------+-------------+-----------|
+| \vdash      | \dashv      | \models   |
+|-------------+-------------+-----------|
+| \perp       | \mid        | \parallel |
+|-------------+-------------+-----------|
+| \bowtie     | \Join       | \smile    |
+|-------------+-------------+-----------|
+| \frown      | \propto     | 无        |
+|-------------+-------------+-----------|
+*** 分割符号
+|------------+------------------------|
+| \lfloor    | \rfloor                |
+|------------+------------------------|
+| \lceil     | \rceil                 |
+|------------+------------------------|
+| \langle    | \rangle                |
+|------------+------------------------|
+| \backslash | 双竖线为一个斜杠和竖线 |
+|------------+------------------------|
+*** 杂项符号
+|--------------+------------+------------|
+| \dag         | \S         | \copyright |
+|--------------+------------+------------|
+| \ddag        | \P         | \pounds    |
+|--------------+------------+------------|
+| \ldots       | \cdots     | \vdots     |
+|--------------+------------+------------|
+| \ddots       | \aleph     | \prime     |
+|--------------+------------+------------|
+| \forall      | \hbar      | \emptyset  |
+|--------------+------------+------------|
+| \exists      | \imath     | \nabla     |
+|--------------+------------+------------|
+| \neg         | \jmath     | \surd      |
+|--------------+------------+------------|
+| \flat        | \ell       | \top       |
+|--------------+------------+------------|
+| \natural     | \wp        | \bot       |
+|--------------+------------+------------|
+| \sharp       | \Re        | \backslash |
+|--------------+------------+------------|
+| \angle       | \Im        | \partial   |
+|--------------+------------+------------|
+| \mho         | \infty     | \Box       |
+|--------------+------------+------------|
+| \Diamond     | \triangle  | \clubsuit  |
+|--------------+------------+------------|
+| \diamondsuit | \heartsuit | \spadesuit |
+|--------------+------------+------------|
+
+*** 大小可变符号
+|---------+-----------+------------|
+| \sum    | \bigcap   | \bigodot   |
+|---------+-----------+------------|
+| \prod   | \bigcup   | \bigotimes |
+|---------+-----------+------------|
+| \coprod | \bigsqcup | \bigoplus  |
+|---------+-----------+------------|
+| \int    | \bigvee   | \biguplus  |
+|---------+-----------+------------|
+| \oint   | \bigwedge | 无         |
+|---------+-----------+------------|
+*** Log符号
+|---------+-------+------+------+---------+---------+------+-------|
+| \arccos | \cos  | \csc | \exp | \ker    | \limsup | \min | \sinh |
+|---------+-------+------+------+---------+---------+------+-------|
+| \arcsin | \cosh | \deg | \gcd | \lg     | \ln     | \Pr  | \sup  |
+|---------+-------+------+------+---------+---------+------+-------|
+| \arctan | \cot  | \det | \hom | \lim    | \log    | \sec | \tan  |
+|---------+-------+------+------+---------+---------+------+-------|
+| \arg    | \coth | \dim | \inf | \liminf | \max    | \sin | \tanh |
+|---------+-------+------+------+---------+---------+------+-------|
