--- a/math.org
+++ b/math.org
@@ -3,9 +3,6 @@
 #+latex_class: org-latex-pdf 
 #+latex: \newpage 
 
-* 概率
-** 概念
-- 样本空间：随机试验的所有可能结果组成的集合; 
 * 代数
 ** 概念
 - 自然数：natural number，{0，1，2，3...}等全体非负整数组成的数的集合称为自然数；
@@ -85,5 +82,16 @@
 *** 应用
 ***** 多项式拟合
 - 概念：根据给定的m个点，并不要求这条曲线经过这些点，而是y=f(x)的近似曲线y=\(\Phi(x)\)；
+* 概率
+** 概念
+- 样本空间：随机试验的所有可能结果组成的集合; 
+- 等可能概型中事件A的计算公式： $$P(A) = \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{A包含的基本事件数}{S中基本事件的总数} $$
+- 条件概率：事件A已经发生的条件下，事件B发生的概率，表示为$$P(B|A)=\frac{P(AB)}{P(A)}$$
+- 互斥时间和的概率：等于各事件概率的和： $P(A_{1}+A_{2}+...+A_{n}) = P(A_{1})+P(A_{2})+...+P(A_{n})$
+- 对立事件A的概率：$P(\overline{A}) = 1 - P(A)$  
+** 排列组合
+- 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为$P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则$P_{r}^{r} = r!$
+- 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为$C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
+- 0!=1; 
   
 
