--- a/math.org
+++ b/math.org
@@ -91,6 +91,8 @@
 - 概率函数：对于随机变量X的概率叫概率函数: $$ p_{i} = P(X = a_{i}), i = 1,...,n $$ 
 - 概率分布：概率函数给出了全部概率1是如何在其可能值之间分配的,  _其实可以将概率分布和概率函数等同认识_ ；
 - 分布函数： _可以认为是概率函数在区间段的求和_ , 设X为一随机变量，则分布函数为 $$P(X \leq x) = F(x), -\infty < x < \infty$$   
+- 概率密度函数：如果对于随机变量X的分布函数F(x),存在非负可积函数f(x)，使对于任意实数x有 
+  $$F(x) = \int_{\infty}^{x}f(t)dt $$ 则f(x)称为X的概率密度函数，简称概率密度, 只有在x点处连续，才有f(x)=F'(x)； 
 - 等可能概型中事件A的计算公式： $$P(A) = \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{A包含的基本事件数}{S中基本事件的总数} $$
 - 条件概率：事件A已经发生的条件下，事件B发生的概率，表示为$$P(B|A)=\frac{P(AB)}{P(A)}$$
 - 互斥时间和的概率：等于各事件概率的和： $P(A_{1}+A_{2}+...+A_{n}) = P(A_{1})+P(A_{2})+...+P(A_{n})$
@@ -104,13 +106,17 @@
   成导致结果A的可能原因，则全概率公式可以看做为“由原因推结果”，而贝叶斯公式则相反为“由结果推原因”，现在有结果A已经发
   生了，在众多原因B_i中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_i根据以往
   的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式如下：在全概率假定下有   
-  $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$  
+  $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
+- 
+
 ** 排列组合
 - 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为$P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则$P_{r}^{r} = r!$
 - 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为$C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
 - 0!=1; 
 * 概率分布
 ** 离散分布
+*** 01分布
+随机变量X只能取0和1两个值，取0和1的概率分布是p，q，p+q=1
 *** 二项分布
 - 定义：服从二项分布的随机变量X表示在n个独立的是/非试验中成功的次数i，其中每次试验的成功概率为p
   $$ p_{i} = C_{n}^{i}p^{i}(1-p)^{n-i},i=0, 1, ..., n $$
