--- a/sitemap.org
+++ b/sitemap.org
@@ -1,10 +1,11 @@
 #+TITLE: Sitemap
 
+   + [[file:renovations.org][2015-10-07 装修日记]]
+   + [[file:index.org][2015-10-07 比克曼的知识管理]]
    + [[file:software.org][2015-09-29 软件 ]]
    + [[file:math.org][2015-09-23 数学 ]]
    + [[file:protocol.org][2015-09-16 协议 ]]
    + [[file:tool.org][2015-09-11 工具]]
-   + [[file:index.org][2015-09-09 比克曼的知识管理]]
    + [[file:hardware.org][2015-09-09 硬件 ]]
    + [[file:language.org][2015-09-09 外语学习]]
    + [[file:encyclopedia.org][2015-09-09 百科知识]]
