增加部分装修流程知识

--- a/renovations.org
+++ b/renovations.org
@@ -1,9 +1,89 @@
 #+title: 装修日记
 #+author: 比克曼
-#+latex_class: org-latex-pdf 
-#+latex: \newpage 
+#+latex_class: org-latex-pdf
+#+latex: \newpage
 
-* 装修流程
+
+* 验房
+** 证件
+在签合同时增加这样的约定：“交房时，应先验房然后办收房手续”，如果当初没有来得及在合同上约定，则可在收楼文件中注明“房内
+情况未看”或“未验房”等字样，以下两书一表必须是原件。
+- 《住宅质量保证书》：开发商针对房屋质量及保修期限、范围作出的承诺，可带走；
+- 《住宅使用说明书》：针对房屋设计、施工及验收中的具体技术指标，如抗震指数、墙体结构类型等的说明，可带走；
+- 《竣工验收备案表》：检查其中各项分项是否备案，且确定自己的楼是否在备案表范围内；
+- 《管线分布竣工图》：可带走；
+- 《面积实测表》：国家认可的专业测绘单位对面积的实测数据；
+** 工具
+- 量具：5m盒尺、25~33cm直角尺、50~60cm丁字尺、1m直尺；
+- 电钳工具：两带头、三头插头（最好是带有指示灯的插座）；用于电话线、电视线、宽带线的各种插头；万用表、摇表、多用螺丝刀；
+  5号电池2节、测电笔、手锤、小锤、大灯泡、小灯泡；
+- 辅助工具：镜子、手电、塑料袋多个、火柴、卫生纸、凳子、笔记本、笔；
+- 验房不能少的专业工具：垂直检测尺、多功能内外直角检测尺、多功能垂直校正器、游标塞尺、对角检测尺、反光镜、伸缩杆；
+- 1只塑料洗脸盆，用于验收下水管道；
+- 1只小榔头、用于验收房子墙体与地面是否空鼓；
+- 1只塞尺，用于测裂缝的宽度；
+- 1只5米卷尺，用于测量房子的净高；
+- 1只万用表，用于测试各个强电插座及弱电类是否畅通；
+- 1只计算器，用于计算数据；
+- 1只水笔，用于签字；
+- 1只扫把，打扫卫生；
+- 1只凳子，坐着休息；
+** 流程
+- 检查厨房烟道：用纸卷点火后灭火冒烟，放在烟道口下方10厘米左右，看烟是否上升到烟道口立即拐弯吸走；
+- 检查卫生间通风情况：卫生间如没有窗户，至少要有通风孔，用上一方法检查抽力，用手电筒查看内部是否有建筑垃圾；
+- 窗边与混凝土接口不能有缝隙：
+- 电路检查：打开所有的灯具开关，检查是否亮。拉下总开关箱内的开关，多次，测试插排；
+- 检查插座和弱电：
+- 检查房屋有无倾斜：从房顶放垂线；
+- 检查有无渗漏：墙面是否变色、气泡、脱皮、掉灰；
+- 检查保温墙面是否滴水：如果是冬天，墙面有结露，则表示有问题；
+- 检查房屋有无裂缝：
+- 检查乳胶漆质量：天花板是否平整；
+- 检查室内门上下是否油漆：使用镜子放到门顶部和底部，检查；
+- 检查墙地砖：有无开裂，有无空鼓；
+- 检查门窗的密封：
+- 检查窗户：
+- 检查管道安装、通畅和密封：
+- 闭存水试验：
+- 水表空转试验：关闭房屋各个水阀开关，看看是否空战，如果有则有问题；
+- 检查厕所、浴具有无列横：
+- 检查供暖设备：
+- 检查建材的品牌与合同是否相符：
+- 检查室内有害气体是否超标：可找正规机构检测；
+* 装修
+装修原则：轻装修，重装饰, 一般包括：水电改造，贴砖，刷墙，做厨房，卫生间吊顶，橱柜等；
+** 装修流程
+按照时间顺序大体30步多：
+1. 办理开工手续：替工人办理门禁等手续；
+2. 自行测量
+3. 前期设计
+4. 主体拆改
+5. 木门厂家上门测量
+6. 橱柜第一次测量
+7. 水电改造
+8. 卫生间防水
+9. 主料进场
+10. 木工
+11. 贴砖
+12. 安装油烟机
+13. 橱柜第二次测量
+14. 刷墙面漆
+15. 厨卫吊顶
+16. 通煤气
+17. 橱柜安装：同时安装水槽、煤气灶
+18. 木门安装
+19. 地板安装
+20. 铺贴壁纸
+21. 散热器安装
+22. 开关插座安装
+23. 灯具安装
+24. 五金洁具安装
+25. 窗帘杆安装
+26. 拓荒保洁
+27. 家具进场
+28. 家电安装
+29. 家居配饰
+30. 搬家
 ** 设计师的服务流程
 - 现场勘查及丈量空间尺寸
 - 平面规划及预算评估
@@ -165,6 +245,8 @@
 - 至少要10平米；
 - 床两边过道要留50厘米的空间才够；
 ** 合同
+合同中定金不可退，订金可以退；避免在装修过程中不停增加预算，必要时可以在合同预算清单中约定“设计方案微调的情况下，允许实
+际用料与预算有5%的偏差，超过该范围拒绝付款”；
 - 一般有7天的合同考虑时间；
 - 如果有任何工程追加，一定要经过双方书面同意。
 - 合同中标示建材等级；
@@ -185,8 +267,6 @@
 同设计师签的合同；
 *** 施工合同
 同施工方签的合同，施工合同一般都含监工；
-
-
 ** 建材
 *** 木质地板
 - 实木地板：厚度1.5~2.1厘米的整块原木切割而成，天然木纹清晰，但天然的木头表面不耐磨。出入频繁易沾灰的玄关不适合；浴室门
@@ -237,5 +317,3 @@
 |    2 | 石材有无破损现象                       |                            |      |          |
 |    3 | 打孔的石材要先确认卫浴配件位置是否相符 | 配件孔径，位置，距离       |      |          |
 |    4 | ...                                    |                            |      |          |
-
-
