增加部分emacs用法（可以gnuplot画图）

--- a/renovations.org
+++ b/renovations.org
@@ -3,7 +3,6 @@
 #+latex_class: org-latex-pdf
 #+latex: \newpage
 
-
 * 验房
 ** 证件
 在签合同时增加这样的约定：“交房时，应先验房然后办收房手续”，如果当初没有来得及在合同上约定，则可在收楼文件中注明“房内
@@ -28,6 +27,7 @@
 - 1只水笔，用于签字；
 - 1只扫把，打扫卫生；
 - 1只凳子，坐着休息；
+- 1只乒乓球：验证各种地板，桌板坡度，空心；
 ** 流程
 - 检查厨房烟道：用纸卷点火后灭火冒烟，放在烟道口下方10厘米左右，看烟是否上升到烟道口立即拐弯吸走；
 - 检查卫生间通风情况：卫生间如没有窗户，至少要有通风孔，用上一方法检查抽力，用手电筒查看内部是否有建筑垃圾；
@@ -63,7 +63,7 @@
 7. 水电改造
 8. 卫生间防水
 9. 主料进场
-10. 木工
+10. 木工:包立管、做装饰吊顶、贴石膏线之类; 
 11. 贴砖
 12. 安装油烟机
 13. 橱柜第二次测量
@@ -317,3 +317,25 @@
 |    2 | 石材有无破损现象                       |                            |      |          |
 |    3 | 打孔的石材要先确认卫浴配件位置是否相符 | 配件孔径，位置，距离       |      |          |
 |    4 | ...                                    |                            |      |          |
+** 插座开关灯
+|------------------+----------------+----|
+| 插座             | 开关           | 灯 |
+|------------------+----------------+----|
+| 卫生间便器处     | 床头装双控开关 |    |
+| 电视墙           |                |    |
+| 床头装2~3个      |                |    |
+| 厨房插座要带开关 |                |    |
+|                  |                |    |
+|------------------+----------------+----|
+
+** 家具
+*** 桌子
+- 餐桌：可以买伸缩餐桌；
+- 梳妆台：镜子可以折叠；
+*** 床
+- 床：1.8米的床，其实是1.9米的，1.5米的其实是1.6米的，关系到插座开关位置；
+- 儿童床：可以上面床，下面书桌；
+ 
+
+
+
